@@ -1,3 +1,6 @@
+2009-04-16	Mike Massonnet
+Prepare for release
+
 2009-04-15	Mike Massonnet
 Use a WeakNotify callback... useless but well...
 
